--- a/PaintStripper/PaintStripperRP/texts/en_US.lang
+++ b/PaintStripper/PaintStripperRP/texts/en_US.lang
@@ -111,5 +111,8 @@ tile.ps:cask_weakness.name=Cask of Weakness
 ##---------------------------------
 ##Misc---------------------------------
 
+##Item/Block Catalogues---------------------------------
+paint_stripper:ps_stained_planks_construction=Stained Planks
+paint_stripper:ps_stained_slabs_construction=Stained Slabs
 
 ##Author Comments: If a block isnt in the language file then it shouldnt be obtained in any non-survival means
