--- a/PaintStripper/PaintStripperRP/texts/en_US.lang
+++ b/PaintStripper/PaintStripperRP/texts/en_US.lang
@@ -44,6 +44,7 @@ item.ps:glassmith_hammer.name=Glassmith's Hammer
 item.ps:glassmith_chisel.name=Glassmith's Chisel
 item.ps:ageless_pocket_watch.name=Ageless Pocket Watch
 item.ps:tasting_spoon.name=Tasting Spoon
+item.ps:amethyst_bottle.name=Amethyst Bottle
 ##Potions---------------------------------
 item.ps.generic_potion.name=Potion of
 ##Effects---------------------------------
