Pure dust variants. Craftable seals level 2.

--- a/PaintStripper/PaintStripperRP/texts/en_US.lang
+++ b/PaintStripper/PaintStripperRP/texts/en_US.lang
@@ -8,6 +8,7 @@ item.ps:small_echo_bud.name=Small Echo Bud
 item.ps:medium_echo_bud.name=Medium Echo Bud
 item.ps:large_echo_bud.name=Large Echo Bud
 item.ps:echo_cluster.name=Echo Cluster
+item.ps:echo_dust.name=Echo Dust
 item.ps:echo_seed.name=Echo Seed
 tile.ps:budding_echo.name=Budding Echo
 tile.ps:echo_shard_block.name=Echo Shard Block
@@ -17,6 +18,7 @@ item.ps:small_glowstone_bud.name=Small Glowstone Bud
 item.ps:medium_glowstone_bud.name=Medium Glowstone Bud
 item.ps:large_glowstone_bud.name=Large Glowstone Bud
 item.ps:glowstone_cluster.name=Glowstone Cluster
+item.ps:pure_glowstone_dust.name=Pure Glowstone Dust
 item.ps:glowstone_seed.name=Glowstone Seed
 tile.ps:budding_glowstone.name=Budding Glowstone
 tile.ps:glowstone_shard_block.name=Glowstone Shard Block
@@ -35,6 +37,7 @@ item.ps:small_redstone_bud.name=Small Redstone Bud
 item.ps:medium_redstone_bud.name=Medium Redstone Bud
 item.ps:large_redstone_bud.name=Large Redstone Bud
 item.ps:redstone_cluster.name=Redstone Cluster
+item.ps:pure_redstone_dust.name=Pure Redstone Dust
 item.ps:redstone_seed.name=Redstone Seed
 tile.ps:budding_redstone.name=Budding Redstone
 tile.ps:redstone_shard_block.name=Redstone Shard Block
