second attempt at cleaning crystals

--- a/PaintStripper/PaintStripperRP/texts/en_US.lang
+++ b/PaintStripper/PaintStripperRP/texts/en_US.lang
@@ -19,11 +19,13 @@ item.ps:medium_glowstone_bud.name=Medium Glowstone Bud
 item.ps:large_glowstone_bud.name=Large Glowstone Bud
 item.ps:glowstone_cluster.name=Glowstone Cluster
 item.ps:pure_glowstone_dust.name=Pure Glowstone Dust
+item.ps:sifted_glowstone_dust.name=Sifted Glowstone Dust
 item.ps:glowstone_seed.name=Glowstone Seed
 tile.ps:budding_glowstone.name=Budding Glowstone
 tile.ps:glowstone_shard_block.name=Glowstone Shard Block
 ##Pure quartz shards---------------------------------
 item.ps:pure_quartz_shard.name=Pure Quartz Shard
+item.ps:sifted_quartz.name=Sifted Quartz
 item.ps:small_pure_quartz_bud.name=Small Pure Quartz Bud
 item.ps:medium_pure_quartz_bud.name=Medium Pure Quartz Bud
 item.ps:large_pure_quartz_bud.name=Large Pure Quartz Bud
@@ -38,6 +40,7 @@ item.ps:medium_redstone_bud.name=Medium Redstone Bud
 item.ps:large_redstone_bud.name=Large Redstone Bud
 item.ps:redstone_cluster.name=Redstone Cluster
 item.ps:pure_redstone_dust.name=Pure Redstone Dust
+item.ps:sifted_redstone_dust.name=Sifted Redstone Dust
 item.ps:redstone_seed.name=Redstone Seed
 tile.ps:budding_redstone.name=Budding Redstone
 tile.ps:redstone_shard_block.name=Redstone Shard Block
