--- a/PaintStripper/PaintStripperRP/texts/en_US.lang
+++ b/PaintStripper/PaintStripperRP/texts/en_US.lang
@@ -63,8 +63,8 @@ item.magical_brewery:seal_longevity_1.name=Seal Of Longevity I
 item.magical_brewery:seal_longevity_2.name=Seal Of Longevity II
 item.magical_brewery:seal_potency_1.name=Seal Of Potency I
 item.magical_brewery:seal_potency_2.name=Seal Of Potency II
-item.magical_brewery:seal_enlargement_1.name=Seal Of Enlargement I
-item.magical_brewery:seal_enlargement_2.name=Seal Of Enlargement II
+item.magical_brewery:seal_enlargement_1.name=Seal Of Enlargement I §c[W.I.P]
+item.magical_brewery:seal_enlargement_2.name=Seal Of Enlargement II §c[W.I.P]
 ##---------------------------------
 
 
